--- a/InstaKilo/Base.lproj/Main.storyboard
+++ b/InstaKilo/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dBs-LG-Lw1">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Jl-8K-TBv">
                                     <size key="itemSize" width="50" height="50"/>
@@ -79,18 +79,48 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="FES-b0-Qxh"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EdM-5M-8iq">
+                                <rect key="frame" x="0.0" y="20" width="187.5" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Bki-cW-G2h"/>
+                                    <constraint firstAttribute="width" constant="187.5" id="DDk-Ji-uMm"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="187.5" id="UZb-iY-FcH"/>
+                                </constraints>
+                                <state key="normal" title="Subject"/>
+                                <connections>
+                                    <action selector="subjectButtonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jKO-Jo-lsN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PdP-7t-6yA">
+                                <rect key="frame" x="187.5" y="20" width="187.5" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="YXk-24-fho"/>
+                                    <constraint firstAttribute="width" constant="187.5" id="lfH-jq-wgA"/>
+                                </constraints>
+                                <state key="normal" title="Location"/>
+                                <connections>
+                                    <action selector="locationPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OG0-Ju-knw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="PdP-7t-6yA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0k4-H6-vMJ"/>
+                            <constraint firstItem="EdM-5M-8iq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5HW-z0-UQ3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dBs-LG-Lw1" secondAttribute="bottom" id="ES6-dm-l5l"/>
-                            <constraint firstItem="dBs-LG-Lw1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cco-Bm-1dA"/>
+                            <constraint firstItem="PdP-7t-6yA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="RyO-oc-KZa"/>
+                            <constraint firstItem="EdM-5M-8iq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Wn0-Lf-7eM"/>
+                            <constraint firstItem="dBs-LG-Lw1" firstAttribute="top" secondItem="EdM-5M-8iq" secondAttribute="bottom" id="gRx-GQ-Gf9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dBs-LG-Lw1" secondAttribute="trailing" id="n8T-Yn-de9"/>
                             <constraint firstItem="dBs-LG-Lw1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s06-tG-01d"/>
+                            <constraint firstItem="EdM-5M-8iq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sut-bH-1bO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="dBs-LG-Lw1" id="EjK-wp-ter"/>
+                        <outlet property="locationButton" destination="PdP-7t-6yA" id="0yY-xW-uIO"/>
+                        <outlet property="subjectButton" destination="EdM-5M-8iq" id="jLz-cF-1KS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
