--- a/InstaKilo/Base.lproj/Main.storyboard
+++ b/InstaKilo/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dBs-LG-Lw1">
                                 <rect key="frame" x="0.0" y="80" width="375" height="587"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Jl-8K-TBv">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="50" height="50"/>
@@ -40,7 +40,7 @@
                                                 </imageView>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="YbQ-pq-7dE" firstAttribute="leading" secondItem="J0E-u2-Iek" secondAttribute="leading" id="25I-Qo-fhs"/>
                                             <constraint firstAttribute="trailing" secondItem="YbQ-pq-7dE" secondAttribute="trailing" id="7B3-xu-PJf"/>
@@ -59,11 +59,11 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write thing here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPo-1J-igw">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="bottomMargin" secondItem="EPo-1J-igw" secondAttribute="bottom" id="Obz-Ug-ITK"/>
                                         <constraint firstItem="EPo-1J-igw" firstAttribute="top" secondItem="4Bh-8Y-rwh" secondAttribute="topMargin" id="h1d-fE-g3N"/>
@@ -86,7 +86,9 @@
                                     <constraint firstAttribute="width" constant="187.5" id="DDk-Ji-uMm"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="187.5" id="UZb-iY-FcH"/>
                                 </constraints>
-                                <state key="normal" title="Subject"/>
+                                <state key="normal" title="Subject">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="subjectButtonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jKO-Jo-lsN"/>
                                 </connections>
@@ -97,13 +99,15 @@
                                     <constraint firstAttribute="height" constant="60" id="YXk-24-fho"/>
                                     <constraint firstAttribute="width" constant="187.5" id="lfH-jq-wgA"/>
                                 </constraints>
-                                <state key="normal" title="Location"/>
+                                <state key="normal" title="Location">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="locationPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OG0-Ju-knw"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="PdP-7t-6yA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0k4-H6-vMJ"/>
                             <constraint firstItem="EdM-5M-8iq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5HW-z0-UQ3"/>
@@ -125,7 +129,52 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="214" y="-45"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="1pW-Tl-EgK">
+            <objects>
+                <tableViewController id="xBZ-Np-ig7" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="uOC-Ic-fUW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="uaP-Pi-jCJ">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uaP-Pi-jCJ" id="eLw-o8-5ro">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xBZ-Np-ig7" id="gRF-gR-gR2"/>
+                            <outlet property="delegate" destination="xBZ-Np-ig7" id="MMM-Nu-oDV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="p4p-0W-ImE"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nbs-dB-zXw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="684" y="119"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="X4e-95-TjH">
+            <objects>
+                <navigationController id="wX6-2q-1nB" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" largeTitles="YES" id="fnK-Gq-vZK">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="xBZ-Np-ig7" kind="relationship" relationship="rootViewController" id="R8w-ju-Bxi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IC5-DT-sBi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-474" y="201"/>
         </scene>
     </scenes>
 </document>
